name: llvm-hs-sandbox
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Zachary Churchill
maintainer: zacharyachurchill@gmail.com
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

executable main
  build-depends: 
    base >= 4.6 && <5.0,
    bytestring >= 0.10,
    mtl >= 2.2,
    containers >= 0.5,
    llvm-hs >= 9.0 && < 10.0,
    llvm-hs-pure >= 9.0 && < 10.0
  other-modules:
    JIT
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
